fix proto and add aggregation client

--- a/central/Shared/MainLayout.razor
+++ b/central/Shared/MainLayout.razor
@@ -1,6 +1,15 @@
 @namespace MeteoMesh.Lite.Shared
 @inherits LayoutComponentBase
 
+<div class="sidebar">
+    <nav>
+        <ul>
+            <li><a href="/">Übersicht</a></li>
+            <li><a href="/aggregates">Aggregates</a></li>
+        </ul>
+    </nav>
+</div>
+
 <div class="main">
     <div class="content px-4">
         @Body
