--- a/central/Pages/Aggregates.razor
+++ b/central/Pages/Aggregates.razor
@@ -31,7 +31,7 @@ else
 }
 
 @code {
-    List<MeteoMesh.Lite.Proto.SensorAggregate>? _aggregates;
+    List<MeteoIpso.Proto.SensorAggregate>? _aggregates;
 
     protected override async Task OnInitializedAsync()
     {
