--- a/central/_Imports.razor
+++ b/central/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
-@using MeteoMesh.Lite
-@using MeteoMesh.Lite.Proto
+@using MeteoIpso
+@using MeteoIpso.Proto
