--- a/central/Pages/_Host.cshtml
+++ b/central/Pages/_Host.cshtml
@@ -6,12 +6,12 @@
 @using MeteoMesh.Lite.Shared
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MeteoMesh Lite</title>
-    <link href="/_content/" rel="stylesheet" />
+    <title>MeteoIpso - Wetter Monitoring</title>
+    <link href="/css/app.css" rel="stylesheet" />
 </head>
 <body>
     <app>
